<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/teamFragment">
    <fragment
        android:id="@+id/teamFragment"
        android:name="com.amarchaud.amTheme.ui.main.TeamFragment"
        android:label="@string/team_title"
        tools:layout="@layout/fragment_team" />
    <fragment
        android:id="@+id/marketFragment"
        android:name="com.amarchaud.amTheme.ui.main.MarketFragment"
        android:label="@string/market_title"
        tools:layout="@layout/fragment_market" />
    <fragment
        android:id="@+id/filterFragment"
        android:name="com.amarchaud.amTheme.ui.main.FilterFragment"
        android:label="@string/filter_title"
        tools:layout="@layout/fragment_filter" >
        <action
            android:id="@+id/action_filterFragment_to_checkFragment"
            app:destination="@id/checkFragment" />
    </fragment>
    <fragment
        android:id="@+id/checkFragment"
        android:name="com.amarchaud.amTheme.ui.main.CheckFragment"
        android:label="fragment_check"
        tools:layout="@layout/fragment_check" />
</navigation>