<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.FilterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/options"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/price"
                layout="@layout/layout_filter_option" />

            <include
                android:id="@+id/size"
                layout="@layout/layout_filter_option" />

            <include
                android:id="@+id/weight"
                layout="@layout/layout_filter_option" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="32dp">

            <TextView
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/buttons"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/leftButton"
                    style="@style/buttonFilterStyle"
                    android:layout_width="174dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/left_button" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/right_button"
                    style="@style/buttonFilterStyle"
                    android:layout_width="174dp"
                    android:layout_height="60dp"
                    android:text="@string/right_button" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="32dp">

            <TextView
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/toggle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <include
                android:id="@+id/buildings"
                layout="@layout/layout_filter_toggle" />

            <include
                android:id="@+id/taxis"
                layout="@layout/layout_filter_toggle" />

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>